--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ plugins:
 - jekyll-remote-theme
 
 title: TensorTract
-description: Self-Supervised Solution to the Control Problem of Articulatory Synthesis
-show_downloads: True
+#description: Self-Supervised Solution to the Control Problem of Articulatory Synthesis
+#show_downloads: True
