--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ plugins:
 
 title: TensorTract
 #description: Self-Supervised Solution to the Control Problem of Articulatory Synthesis
-#show_downloads: True
+show_downloads: True
+site.github.zip_url: #ACOUSTIC_TO_ARTICULATORY_INVERSION
